# exmaple-mcp

./: README.md  pyproject.toml
src/example_mcp/: server.py
