[project]
name = "example-mcp"
version = "0.1.0"
description = "A example MCP server"
authors = [
    {name = "yanrujing", email = "rujing.yan@protagonist-ai.com"}
]
repository = "https://github.com/protagolabs/exmaple-mcp"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp (>=1.6.0,<2.0.0)",
]

packages = [{ include = "src/example_mcp" }]


[tool.poetry.scripts]
example-mcp = "example_mcp:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

